--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components{
+    .container{
+      @apply max-w-[1440px] mx-auto px-5 md:px-8 lg:px-12 xl:px-20 
+    }
+  }
